# ONNX-Modeling

./: README.md  pyproject.toml
examples/: convert_rwkv.py
src/onnx_modeling/: __init__.py  opslist.py
