[project]
name = "onnx-modeling"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Ryu1845", email = "ryu@tpgjbo.xyz" }
]
dependencies = [
    "onnx~=1.14.0",
    "numpy~=1.24.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "torch~=2.0.1",
]

[tool.hatch.metadata]
allow-direct-references = true
